<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SearchView
            android:id="@+id/searchPosts"
            android:layout_width="345dp"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:background="@drawable/button_style"
            android:elevation="30dp"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            style="@style/WhiteTextInSearchView"/>

        <ImageButton
            android:id="@+id/addPost"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/button_style"
            android:onClick="addNewPost"
            android:src="@drawable/plus"
            android:elevation="30dp"/>

    </Toolbar>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <ListView
        android:id="@+id/PostsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>