...
      android:layout_marginStart="24dp"
      android:layout_marginTop="20dp"
      android:text="Текст поста"
      android:textColor="#673AB7"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/PostTitle" />

  <EditText
      android:id="@+id/PostTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
...
      android:gravity="start|top"
      android:inputType="textMultiLine"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <Button
      android:id="@+id/AddButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="AddPost"
      android:text="Добавить"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
...
